- bug [lang] catalan wrong accented characters
- bug #1893034 [Export] SET NAMES for importing with command-line client 
+ [lang] Russian update, thanks to Victor Volkov
- bug #1910485 [core] Unsetting the whitelist during the loop,
  thanks to Jeroen Vrijkorte - jv_map
- bug #1906980 [Export] Import of VIEWs fails if temp table exists,
  thanks to Falk Nisius - klaf

2.11.5.0 (2008-03-01)
- bug #1862661 [GUI] Warn about rename deleting database 
- bug #1866041 [interface] Incorrect sorting with AS 
- bug #1871038 [import] Notice: undefined variable first_sql_delimiter 
- bug #1873110 [export] Problem exporting with a LIMIT clause 
- bug #1871164 [GUI] Empty and navigation frame synch. 
- patch #1873188 [GUI] Making db pager work when js is disabled,
  thanks to Jürgen Wind - windkiel
- bug #1875010 [auth] MySQL server and client version mismatch (mysql ext.) 
- patch #1879031 [transform] dateformat transformation and UNIX timestamps,
  thanks to Tim Steiner - spam38
- bug [import] Do not verify a missing enclosing character for CSV,
  because files generated by Excel don't have any enclosing character
- bug #1799691 [export] "Propose table structure" and Export 
- bug #1884911 [GUI] Space usage
- bug #1863326 [GUI] Wrong error message / no edit (Suhosin) 
- bug #1887204 [GUI] Order columns in result list messing up query 
- patch #1893538 [GUI] Display issues on Opera 9.50,
  thanks to Jürgen Wind - windkiel
- bug [GUI] Do not display the database name used by the previous user,
  thanks to Ronny Görner
- bug [security] Remove cookies from $_REQUEST for better coexistence with
  other applications, thanks to Richard Cunningham. See PMASA-2008-1.

2.11.4.0 (2008-01-12)
- bug #1843428 [GUI] Space issue with DROP/DELETE/ALTER TABLE 
- bug #1807816 [search] regular expression search doesn't work with
  backslashes
- bug #1843463 [GUI] DROP PROCEDURE does not show alert 
- bug #1835904 [GUI] Back link after a SQL error forgets the query 